Fixed some styling in Home.js and Home.scss. Put a larger gap between the form and posts

--- a/Client/my-app/src/components/Home/Home.scss
+++ b/Client/my-app/src/components/Home/Home.scss
@@ -11,6 +11,8 @@
     }
 
     .post-card{
+        display: flex;
+        flex-direction: column;
         gap: 20px;
         /*@include themify($themes){
             background-color: themed("bg");
